# old-django-website

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.txt  LICENSE.txt  Makefile  README.markdown  README.md  docker-compose.yaml  fabfile.py  manage-dev.py  manage-live.py  manage-stage.py  manage-testing.py  manage.py  production-exclude.lst  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yaml
ansible/: hosts
ansible/playbooks/: deploy.yml
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/templates/core/: base.html  home.html  meetup.html
demo/: demo.py
demo/management/commands/: make_demo.py
pygraz_website/: asgi.py  context_processors.py  settings.py  urls.py  views.py  wsgi.py
pygraz_website/apps/accounts/: contents.py  forms.py  models.py  urls.py  views.py
pygraz_website/apps/accounts/migrations/: 0001_initial.py  0002_alter_profile_options_alter_profile_privacy_and_more.py
pygraz_website/apps/accounts/south_migrations/: 0001_initial.py
pygraz_website/apps/companies/: admin.py  emails.py  forms.py  models.py  tests.py  urls.py  views.py
pygraz_website/apps/core/: tests.py
pygraz_website/apps/meetups/: admin.py  decorators.py  emails.py  forms.py  models.py  tests.py  urls.py  views.py
pygraz_website/settings/: base.py  development.py  secrets.py  testing.py
pygraz_website/static/: config.rb
pygraz_website/static/css/: _fonts.scss  _forms.scss  screen.scss
pygraz_website/static/fonts/: League_Gothic-webfont.license.txt
pygraz_website/static/imgs/: toparrow-bg.pxm
pygraz_website/static/js/: jquery-1.7.2.min.js  main.js
pygraz_website/templates/: 404.html  500.html  base.html  index.html
pygraz_website/templates/companies/: base.html  company_form.html
pygraz_website/templates/meetups/: base.html  meetup-data.html  meetup_detail.html  session_detail.html
pygraz_website/templates/userena/: profile_form.html  signin_form.html
requirements/: base.txt  development.txt  live.txt  stage.txt  testing.txt
scripts/: build_migrations.sh
tests/demo/: test_demo.py
tools/: fetch_rsvps.js
(+73 files in other folders)
