[pycodestyle]
max-line-length = 120

[tool.black]
target-version = ['py310']
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | build
  | dist
 )/
'''

[tool.isort]
profile = "black"
line_length = 120
default_section = "THIRDPARTY"
known_first_party = "pygraz_website"
skip_glob = "venv"

[tool.poetry]
name = "pygraz_website"
version = "2.0.0"
description = "Website of the Python user group Graz"
authors = ["Dorian Santner", "Horst Gutmann", "Thomas Aglassinger"]
license = "License :: OSI Approved :: BSD License"

[tool.poetry.dependencies]
python = ">=3.10, <4"
django = "^4.2.6"
pillow = "^10.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-django = "^4.5.2"

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    """
filterwarnings = [
    "default",
    "ignore:.*'django_extensions' defines default_app_config",
]
minversion = "7.2"
testpaths = [
    "tests",
]
DJANGO_SETTINGS_MODULE = "pygraz_website.settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
